[package]
name = "zlayer-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
gloo-timers = { version = "0.3.0", optional = true }
leptos = { version = "0.8", features = ["nonce"] }
leptos-chartistry = "0.2"
leptos_axum = { version = "0.8", optional = true }
leptos_meta = "0.8"
leptos_router = "0.8"
reqwest = { workspace = true, features = ["json", "query"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["fs", "trace", "compression-br", "cors"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.85", features = ["Window", "Document", "Element", "Storage", "MediaQueryList"] }
zlayer-agent = { version = "0.1.0", path = "../zlayer-agent", optional = true }
zlayer-api = { version = "0.1.0", path = "../zlayer-api", optional = true }
zlayer-spec = { version = "0.1.0", path = "../zlayer-spec", optional = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "zlayer-manager"
path = "src/main.rs"
required-features = ["ssr"]

[features]
default = []

# SSR feature for server-side rendering (server binary)
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
    "leptos-chartistry/ssr",
    "dep:leptos_axum",
    "dep:tokio",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:clap",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:reqwest",
    "dep:thiserror",
    "dep:zlayer-api",
    "dep:zlayer-agent",
    "dep:zlayer-spec",
]

# Hydrate feature for client-side hydration (WASM binary)
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:gloo-timers",
]

# Metadata for cargo-leptos
[package.metadata.leptos]
output-name = "zlayer-manager"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:9120"
reload-port = 9121
# Tailwind v4 CSS input file
tailwind-input-file = "./tailwind.css"
# Features
bin-features = ["ssr"]
lib-features = ["hydrate"]
# Targets
bin-target = "zlayer-manager"
# Environment
env = "DEV"
# Hash files for cache busting
hash-files = true
