[package]
name = "zlayer-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
axum = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
gloo-timers = { version = "0.3.0", optional = true }
http-body-util = { version = "0.1", optional = true }
hyper = { workspace = true, features = ["client", "http1"], optional = true }
hyper-util = { workspace = true, features = ["client", "client-legacy", "http1", "tokio"], optional = true }
leptos = { version = "0.8", default-features = false, features = ["nonce"], optional = true }
leptos-chartistry = { version = "0.2", default-features = false, optional = true }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8", default-features = false, optional = true }
leptos_router = { version = "0.8", default-features = false, optional = true }
reqwest = { workspace = true, features = ["json", "query"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["fs", "trace", "compression-br", "cors"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "Storage", "MediaQueryList", "Location"], optional = true }
zlayer-agent = { workspace = true, optional = true }
zlayer-api = { workspace = true, optional = true }
zlayer-spec = { workspace = true, optional = true }
zlayer-types = { workspace = true, optional = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "zlayer-manager"
path = "src/main.rs"
required-features = ["ssr"]

# WASM: getrandom 0.3+ needs wasm_js feature for wasm32 targets (transitive via ahash/hashbrown)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = []

# SSR feature for server-side rendering (server binary)
ssr = [
    "dep:leptos",
    "dep:leptos_meta",
    "dep:leptos_router",
    "dep:leptos-chartistry",
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
    "leptos-chartistry/ssr",
    "dep:leptos_axum",
    "dep:tokio",
    "dep:axum",
    "dep:bytes",
    "dep:http-body-util",
    "dep:hyper",
    "dep:hyper-util",
    "dep:tower",
    "dep:tower-http",
    "dep:clap",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:reqwest",
    "dep:thiserror",
    "dep:zlayer-api",
    "dep:zlayer-agent",
    "dep:zlayer-spec",
    "dep:zlayer-types",
]

# Hydrate feature for client-side hydration (WASM binary)
hydrate = [
    "dep:leptos",
    "dep:leptos_meta",
    "dep:leptos_router",
    "dep:leptos-chartistry",
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:console_error_panic_hook",
    "dep:gloo-timers",
]

# Metadata for cargo-leptos
[package.metadata.leptos]
output-name = "zlayer-manager"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:6677"
reload-port = 6678
# Tailwind v4 CSS input file
tailwind-input-file = "./tailwind.css"
# Features
bin-features = ["ssr"]
lib-features = ["hydrate"]
# Assets directory
assets-dir = "assets"
# Hash files for cache busting
hash-files = true
