[package]
name = "zlayer-overlay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Encrypted overlay networking for containers using boringtun userspace WireGuard"
keywords = ["container", "networking", "boringtun", "overlay", "userspace"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
blake2.workspace = true
ipnet = "2.10"
serde.workspace = true
serde_json.workspace = true
zlayer-spec.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
hickory-client.workspace = true
hickory-server.workspace = true
x25519-dalek.workspace = true
zlayer-core.workspace = true
base64.workspace = true
hex.workspace = true
boringtun = { version = "0.7.0", features = ["device"] }

[lints]
workspace = true
