[package]
name = "zlayer-overlay-zql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Encrypted overlay networking for containers using boringtun userspace WireGuard"
keywords = ["container", "networking", "boringtun", "overlay", "userspace"]
categories = ["network-programming"]
readme = "README.md"
publish = ["forgejo"]

[dependencies]
blake2.workspace = true
ipnet = "2.10"
serde.workspace = true
serde_json.workspace = true
zlayer-spec.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
hickory-client.workspace = true
hickory-server.workspace = true
x25519-dalek.workspace = true
zlayer-core.workspace = true
base64.workspace = true
hex.workspace = true
boringtun = { version = "0.7.0", features = ["device"] }
rand = { workspace = true, optional = true }
socket2 = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"
netlink-packet-route = "0.19"
futures-util = "0.3"

[features]
default = []
nat = ["dep:rand", "dep:socket2"]

[lints]
workspace = true
