[package]
name = "zlayer-paths-zql"
description = "Centralized filesystem path resolution for ZLayer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = ["forgejo"]

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["user"] }
