[package]
name = "zlayer-paths"
description = "Centralized filesystem path resolution for ZLayer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["zlayer", "paths", "filesystem"]
categories = ["filesystem", "config"]

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["user"] }
