[package]
name = "zlayer-paths"
description = "Centralized filesystem path resolution for ZLayer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["zlayer", "paths", "filesystem"]
categories = ["filesystem", "config"]

[dependencies]
tempfile = "3"
zlayer-types = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["user"] }
libc = { workspace = true }

# Windows-only: used by `is_root()` to probe administrator status via
# `IsUserAnAdmin` (shell32). Keep the feature list minimal — only what
# the Windows branch of this crate actually calls.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
] }
